[gd_scene load_steps=8 format=4 uid="uid://dd6hgfry1xx6d"]

[ext_resource type="PackedScene" uid="uid://5e53aevhu531" path="res://src/map/layer_ground.tscn" id="1_q4jpq"]
[ext_resource type="Script" path="res://src/game_scene.gd" id="1_ssgfv"]
[ext_resource type="PackedScene" uid="uid://4sv3s2lr7p00" path="res://src/player/player.tscn" id="2_rr3li"]
[ext_resource type="PackedScene" uid="uid://3j4mrlf5u4kh" path="res://src/map/layer_breakable.tscn" id="3_74tet"]
[ext_resource type="PackedScene" uid="uid://cn3ldgbnyqkkd" path="res://src/map/double_jump.tscn" id="3_yvqr7"]
[ext_resource type="PackedScene" uid="uid://cm413d50x1788" path="res://src/map/spawner.tscn" id="4_v0nl7"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yrb16"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_ssgfv")

[node name="Tilemaps" type="Node" parent="."]

[node name="Ground" parent="Tilemaps" instance=ExtResource("1_q4jpq")]
tile_map_data = PackedByteArray("AAABAAsAAAABAAAAAAACAAsAAAACAAAAAAADAAsAAAACAAAAAAAEAAsAAAACAAAAAAAFAAsAAAACAAAAAAAGAAsAAAACAAAAAAAHAAsAAAACAAAAAAAIAAsAAAACAAAAAAAJAAsAAAADAAAAAAALAAkAAAABAAEAAAAMAAkAAAACAAEAAAANAAkAAAACAAEAAAAOAAkAAAACAAEAAAAPAAkAAAADAAEAAAAQAAUAAAABAAAAAAARAAUAAAADAAAAAAAUAAgAAAABAAcAAAAUAAcAAAABAAYAAAAUAAYAAAABAAYAAAAUAAUAAAABAAYAAAAUAAQAAAABAAYAAAAUAAMAAAABAAYAAAAUAAIAAAABAAEAAAAVAAIAAAACAAEAAAAWAAMAAAACAAYAAAAXAAMAAAADAAYAAAAXAAQAAAADAAYAAAAXAAUAAAADAAYAAAAXAAYAAAADAAYAAAAXAAcAAAADAAYAAAAXAAgAAAADAAcAAAAWAAgAAAACAAcAAAAVAAgAAAACAAcAAAAVAAcAAAACAAYAAAAVAAYAAAACAAYAAAAVAAUAAAACAAYAAAAVAAQAAAACAAYAAAAVAAMAAAACAAYAAAAWAAQAAAACAAYAAAAWAAUAAAACAAYAAAAWAAYAAAACAAYAAAAWAAcAAAACAAYAAAAWAAIAAAACAAEAAAAXAAIAAAADAAEAAAAbAAkAAAABAAEAAAAcAAkAAAACAAEAAAAdAAkAAAACAAEAAAAeAAkAAAACAAEAAAAfAAkAAAACAAEAAAAgAAkAAAADAAEAAAAgAAoAAAADAAcAAAAfAAoAAAACAAcAAAAeAAoAAAACAAcAAAAdAAoAAAACAAcAAAAcAAoAAAACAAcAAAAbAAoAAAABAAcAAAALAAoAAAABAAYAAAALAAsAAAABAAcAAAAMAAsAAAACAAcAAAAMAAoAAAACAAYAAAANAAoAAAACAAYAAAANAAsAAAACAAcAAAAOAAsAAAACAAcAAAAOAAoAAAACAAYAAAAPAAoAAAADAAYAAAAPAAsAAAADAAcAAAAiAAUAAAAAAAAAAAAkAAkAAAABAAAAAAAlAAkAAAACAAAAAAAmAAkAAAACAAAAAAAnAAkAAAADAAAAAAAjAAsAAAABAAAAAAAkAAsAAAADAAAAAAAlAAMAAAAAAAEAAAAlAAQAAAAAAAYAAAAlAAUAAAAAAAcAAAAoAAMAAAAAAAEAAAAoAAQAAAAAAAYAAAAoAAUAAAAAAAcAAAAtAAsAAAABAAEAAAAtAAwAAAABAAcAAAAvAAwAAAACAAcAAAAuAAwAAAACAAcAAAAwAAwAAAACAAcAAAAxAAwAAAACAAcAAAAyAAwAAAACAAcAAAAzAAwAAAACAAcAAAA0AAwAAAACAAcAAAA1AAwAAAACAAcAAAA2AAwAAAACAAcAAAA3AAwAAAACAAcAAAA4AAwAAAACAAcAAAA5AAwAAAACAAcAAAA6AAsAAAACAAEAAAA7AAsAAAACAAEAAAA8AAsAAAACAAEAAAA8AAwAAAACAAcAAAA9AAwAAAADAAcAAAA7AAwAAAACAAcAAAA6AAwAAAACAAcAAAA5AAsAAAACAAEAAAA4AAsAAAACAAEAAAA3AAsAAAACAAEAAAA2AAsAAAACAAEAAAA1AAsAAAACAAEAAAA0AAsAAAACAAEAAAAzAAsAAAACAAEAAAAyAAsAAAACAAEAAAAxAAsAAAACAAEAAAAwAAsAAAACAAEAAAAvAAsAAAACAAEAAAAuAAsAAAACAAEAAAA9AAsAAAADAAEAAAA2AAgAAAAAAAAAAAA4AAYAAAAAAAAAAAA6AAQAAAAAAAAAAAA8AAIAAAAAAAAAAABBAAIAAAABAAAAAABCAAIAAAACAAAAAABDAAIAAAACAAAAAABEAAIAAAACAAAAAABFAAIAAAACAAAAAABGAAIAAAACAAAAAABHAAIAAAADAAAAAABKAAQAAAAAAAEAAABKAAUAAAAAAAYAAABKAAYAAAAAAAYAAABKAAcAAAAAAAcAAABNAAYAAAAAAAEAAABNAAcAAAAAAAYAAABNAAgAAAAAAAYAAABNAAkAAAAAAAcAAABQAAwAAAABAAAAAABRAAwAAAACAAAAAABSAAwAAAACAAAAAABTAAwAAAACAAAAAABUAAwAAAACAAAAAABVAAwAAAACAAAAAABWAAwAAAACAAAAAABXAAwAAAACAAAAAABYAAwAAAACAAAAAABZAAwAAAADAAAAAAA=")
metadata/_edit_lock_ = true

[node name="Breakable" parent="Tilemaps" instance=ExtResource("3_74tet")]
tile_map_data = PackedByteArray("AAAGAAUAAAAGAAEAAAAHAAUAAAAGAAEAAAAIAAUAAAAGAAEAAAAJAAUAAAAGAAEAAAAKAAUAAAAGAAEAAAA=")

[node name="SceneCamera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_bottom = 0
position_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="WorldBoundary" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary"]
position = Vector2(0, 240)
shape = SubResource("WorldBoundaryShape2D_yrb16")
metadata/_edit_lock_ = true

[node name="PlayerSpawner" parent="." node_paths=PackedStringArray("spawn_to") instance=ExtResource("4_v0nl7")]
position = Vector2(237, 93)
to_spawn = ExtResource("2_rr3li")
spawn_to = NodePath("..")
metadata/_edit_lock_ = true

[node name="DoubleJump" parent="." instance=ExtResource("3_yvqr7")]
position = Vector2(74, 132)
collision_layer = 1
collision_mask = 1
metadata/_edit_lock_ = true

[connection signal="body_entered" from="WorldBoundary" to="." method="_on_world_boundary_body_entered"]
